/api/ping + OpenApi validation works