@@ -1,15 +1,10 @@
-FROM gradle:4.7.0-jdk8-alpine AS build
-COPY --chown=gradle:gradle . /home/gradle/src
-WORKDIR /home/gradle/src
-RUN gradle build --no-daemon 
+FROM golang:alpine AS builder
+RUN apk --no-cache add bash git make
+WORKDIR /app
+COPY ./go.mod ./go.sum ./
+RUN go mod download
 
-FROM openjdk:8-jre-slim
+COPY ./ ./
+RUN CGO_ENABLED=0 GOOS=linux go build -o bin/main ./cmd/main.go
 
-EXPOSE 8080
-
-RUN mkdir /app
-
-COPY --from=build /home/gradle/src/build/libs/*.jar /app/spring-boot-application.jar
-
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
-
+ENTRYPOINT ["./bin/main"]
